# sigslot

./: .gitignore  CMakeLists.txt  README.md  sigslot.cc  sigslot.h
cmake/: sigslotConfig.cmake  sigslotConfigVersion.cmake
